// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Menu di navigazione/Megamenu ConCallToActionADestra 1`] = `
<div>
  <nav
    class="has-megamenu navbar navbar-expand-lg"
  >
    <div
      class="container-fluid"
    >
      <a
        class="navbar-brand"
      />
      <button
        aria-label="Toggle navigation"
        class="custom-navbar-toggler navbar-toggler"
        type="button"
      >
        <svg
          class="icon icon-sm"
          enable-background="new 0 0 24 24"
          role="img"
          viewBox="0 0 24 24"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            icon
          </title>
          <path
            d="M4 12c.1.5-.3.9-.8 1H3c-.6 0-1-.4-1-1s.4-1 1-1c.5-.1.9.3 1 .8v.2zM3 4.5c-.5-.1-.9.3-1 .8v.2c-.1.5.3.9.8 1H3c.5.1.9-.3 1-.8v-.2c.1-.5-.3-.9-.8-1H3zm0 13c-.6 0-1 .4-1 1s.4 1 1 1 1-.4 1-1-.4-1-1-1zM6 5v1h16V5H6zm0 7.5h16v-1H6v1zM6 19h16v-1H6v1z"
          />
        </svg>
      </button>
      <div
        class="navbar-collapsable collapse navbar-collapsable"
        style="display: none;"
      >
        <div
          class="overlay"
          style="display: none;"
        />
        <div
          class="close-div visually-hidden"
        >
          <button
            class="btn close-menu"
            type="button"
          >
            <span
              class="it-close"
            />
            close
          </button>
        </div>
        <div
          class="menu-wrapper"
        >
          <ul
            class="mt-0 navbar-nav"
          >
            <li
              class="megamenu dropdown nav-item"
            >
              <a
                aria-haspopup="true"
                class="px-lg-2 px-xl-3 dropdown-toggle nav-link"
                data-bs-toggle="dropdown"
                role="button"
              >
                <span>
                  Megamenu con Call to Action a destra
                </span>
                <svg
                  class="icon icon-expand icon-xs ms-1"
                  enable-background="new 0 0 24 24"
                  role="img"
                  viewBox="0 0 24 24"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    icon
                  </title>
                  <path
                    d="M11.6 15.4 6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                  />
                </svg>
              </a>
              <div
                class="dropdown-menu"
              >
                <div
                  class="megamenu pb-5 pt-3 py-lg-0"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-12 col-lg-8"
                    >
                      <div
                        class="row"
                      >
                        <div
                          class="col-12 col-lg-6"
                        >
                          <div
                            class="link-list-wrapper"
                          >
                            <ul
                              class="link-list"
                            >
                              <li>
                                <a
                                  class="dropdown-item list-item"
                                  href="#"
                                  role="menuitem"
                                  tabindex="0"
                                >
                                  <svg
                                    class="icon me-2 icon-primary icon-xs"
                                    enable-background="new 0 0 24 24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <title>
                                      icon
                                    </title>
                                    <path
                                      d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                    />
                                  </svg>
                                  <span>
                                    Link lista 1
                                  </span>
                                </a>
                              </li>
                              <li>
                                <a
                                  class="dropdown-item list-item"
                                  href="#"
                                  role="menuitem"
                                  tabindex="0"
                                >
                                  <svg
                                    class="icon me-2 icon-primary icon-xs"
                                    enable-background="new 0 0 24 24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <title>
                                      icon
                                    </title>
                                    <path
                                      d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                    />
                                  </svg>
                                  <span>
                                    Link lista 2
                                  </span>
                                </a>
                              </li>
                              <li>
                                <a
                                  class="dropdown-item list-item"
                                  href="#"
                                  role="menuitem"
                                  tabindex="0"
                                >
                                  <svg
                                    class="icon me-2 icon-primary icon-xs"
                                    enable-background="new 0 0 24 24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <title>
                                      icon
                                    </title>
                                    <path
                                      d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                    />
                                  </svg>
                                  <span>
                                    Link lista 3
                                  </span>
                                </a>
                              </li>
                            </ul>
                          </div>
                        </div>
                        <div
                          class="col-12 col-lg-6"
                        >
                          <div
                            class="link-list-wrapper"
                          >
                            <ul
                              class="link-list"
                            >
                              <li>
                                <a
                                  class="dropdown-item list-item"
                                  href="#"
                                  role="menuitem"
                                  tabindex="0"
                                >
                                  <svg
                                    class="icon me-2 icon-primary icon-xs"
                                    enable-background="new 0 0 24 24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <title>
                                      icon
                                    </title>
                                    <path
                                      d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                    />
                                  </svg>
                                  <span>
                                    Link lista 1
                                  </span>
                                </a>
                              </li>
                              <li>
                                <a
                                  class="dropdown-item list-item"
                                  href="#"
                                  role="menuitem"
                                  tabindex="0"
                                >
                                  <svg
                                    class="icon me-2 icon-primary icon-xs"
                                    enable-background="new 0 0 24 24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <title>
                                      icon
                                    </title>
                                    <path
                                      d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                    />
                                  </svg>
                                  <span>
                                    Link lista 2
                                  </span>
                                </a>
                              </li>
                              <li>
                                <a
                                  class="dropdown-item list-item"
                                  href="#"
                                  role="menuitem"
                                  tabindex="0"
                                >
                                  <svg
                                    class="icon me-2 icon-primary icon-xs"
                                    enable-background="new 0 0 24 24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <title>
                                      icon
                                    </title>
                                    <path
                                      d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                    />
                                  </svg>
                                  <span>
                                    Link lista 3
                                  </span>
                                </a>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="col-12 col-lg-4"
                    >
                      <div
                        class="it-footer-link-wrapper-vertical"
                      >
                        <div
                          class="d-flex flex-column justify-content-around"
                        >
                          <a
                            href="#"
                          >
                            <svg
                              class="icon me-2 icon-primary icon-sm"
                              enable-background="new 0 0 24 24"
                              role="img"
                              viewBox="0 0 24 24"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <title>
                                icon
                              </title>
                              <path
                                d="m18 22.7-6-6-6 6V2h12v20.7zm-6-7.4 5 5V3H7v17.3l5-5z"
                              />
                            </svg>
                            <span>
                              Call to action 1
                            </span>
                          </a>
                          <a
                            href="#"
                          >
                            <svg
                              class="icon me-2 icon-primary icon-sm"
                              enable-background="new 0 0 24 24"
                              role="img"
                              viewBox="0 0 24 24"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <title>
                                icon
                              </title>
                              <path
                                d="m18 22.7-6-6-6 6V2h12v20.7zm-6-7.4 5 5V3H7v17.3l5-5z"
                              />
                            </svg>
                            <span>
                              Call to action 2
                            </span>
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Stories Snapshots Documentazione/Menu di navigazione/Megamenu ConCallToActionInBasso 1`] = `
<div>
  <nav
    class="has-megamenu navbar navbar-expand-lg"
  >
    <div
      class="container-fluid"
    >
      <a
        class="navbar-brand"
      />
      <button
        aria-label="Toggle navigation"
        class="custom-navbar-toggler navbar-toggler"
        type="button"
      >
        <svg
          class="icon icon-sm"
          enable-background="new 0 0 24 24"
          role="img"
          viewBox="0 0 24 24"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            icon
          </title>
          <path
            d="M4 12c.1.5-.3.9-.8 1H3c-.6 0-1-.4-1-1s.4-1 1-1c.5-.1.9.3 1 .8v.2zM3 4.5c-.5-.1-.9.3-1 .8v.2c-.1.5.3.9.8 1H3c.5.1.9-.3 1-.8v-.2c.1-.5-.3-.9-.8-1H3zm0 13c-.6 0-1 .4-1 1s.4 1 1 1 1-.4 1-1-.4-1-1-1zM6 5v1h16V5H6zm0 7.5h16v-1H6v1zM6 19h16v-1H6v1z"
          />
        </svg>
      </button>
      <div
        class="navbar-collapsable collapse navbar-collapsable"
        style="display: none;"
      >
        <div
          class="overlay"
          style="display: none;"
        />
        <div
          class="close-div visually-hidden"
        >
          <button
            class="btn close-menu"
            type="button"
          >
            <span
              class="it-close"
            />
            close
          </button>
        </div>
        <div
          class="menu-wrapper"
        >
          <ul
            class="mt-0 navbar-nav"
          >
            <li
              class="megamenu dropdown nav-item"
            >
              <a
                aria-haspopup="true"
                class="px-lg-2 px-xl-3 dropdown-toggle nav-link"
                data-bs-toggle="dropdown"
                role="button"
              >
                <span>
                  Megamenu con Call to Action in basso
                </span>
                <svg
                  class="icon icon-expand icon-xs ms-1"
                  enable-background="new 0 0 24 24"
                  role="img"
                  viewBox="0 0 24 24"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    icon
                  </title>
                  <path
                    d="M11.6 15.4 6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                  />
                </svg>
              </a>
              <div
                class="dropdown-menu"
              >
                <div
                  class="megamenu pb-5 pt-3 py-lg-0"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-12 col-lg-4"
                    >
                      <div
                        class="link-list-wrapper"
                      >
                        <ul
                          class="link-list"
                        >
                          <li>
                            <a
                              class="dropdown-item list-item"
                              href="#"
                              role="menuitem"
                              tabindex="0"
                            >
                              <svg
                                class="icon me-2 icon-primary icon-xs"
                                enable-background="new 0 0 24 24"
                                role="img"
                                viewBox="0 0 24 24"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title>
                                  icon
                                </title>
                                <path
                                  d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                />
                              </svg>
                              <span>
                                Link lista 1
                              </span>
                            </a>
                          </li>
                          <li>
                            <a
                              class="dropdown-item list-item"
                              href="#"
                              role="menuitem"
                              tabindex="0"
                            >
                              <svg
                                class="icon me-2 icon-primary icon-xs"
                                enable-background="new 0 0 24 24"
                                role="img"
                                viewBox="0 0 24 24"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title>
                                  icon
                                </title>
                                <path
                                  d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                />
                              </svg>
                              <span>
                                Link lista 2
                              </span>
                            </a>
                          </li>
                          <li>
                            <a
                              class="dropdown-item list-item"
                              href="#"
                              role="menuitem"
                              tabindex="0"
                            >
                              <svg
                                class="icon me-2 icon-primary icon-xs"
                                enable-background="new 0 0 24 24"
                                role="img"
                                viewBox="0 0 24 24"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title>
                                  icon
                                </title>
                                <path
                                  d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                />
                              </svg>
                              <span>
                                Link lista 3
                              </span>
                            </a>
                          </li>
                        </ul>
                      </div>
                    </div>
                    <div
                      class="col-12 col-lg-4"
                    >
                      <div
                        class="link-list-wrapper"
                      >
                        <ul
                          class="link-list"
                        >
                          <li>
                            <a
                              class="dropdown-item list-item"
                              href="#"
                              role="menuitem"
                              tabindex="0"
                            >
                              <svg
                                class="icon me-2 icon-primary icon-xs"
                                enable-background="new 0 0 24 24"
                                role="img"
                                viewBox="0 0 24 24"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title>
                                  icon
                                </title>
                                <path
                                  d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                />
                              </svg>
                              <span>
                                Link lista 4
                              </span>
                            </a>
                          </li>
                          <li>
                            <a
                              class="dropdown-item list-item"
                              href="#"
                              role="menuitem"
                              tabindex="0"
                            >
                              <svg
                                class="icon me-2 icon-primary icon-xs"
                                enable-background="new 0 0 24 24"
                                role="img"
                                viewBox="0 0 24 24"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title>
                                  icon
                                </title>
                                <path
                                  d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                />
                              </svg>
                              <span>
                                Link lista 5
                              </span>
                            </a>
                          </li>
                          <li>
                            <a
                              class="dropdown-item list-item"
                              href="#"
                              role="menuitem"
                              tabindex="0"
                            >
                              <svg
                                class="icon me-2 icon-primary icon-xs"
                                enable-background="new 0 0 24 24"
                                role="img"
                                viewBox="0 0 24 24"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title>
                                  icon
                                </title>
                                <path
                                  d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                />
                              </svg>
                              <span>
                                Link lista 6
                              </span>
                            </a>
                          </li>
                        </ul>
                      </div>
                    </div>
                    <div
                      class="col-12 col-lg-4"
                    >
                      <div
                        class="link-list-wrapper"
                      >
                        <ul
                          class="link-list"
                        >
                          <li>
                            <a
                              class="dropdown-item list-item"
                              href="#"
                              role="menuitem"
                              tabindex="0"
                            >
                              <svg
                                class="icon me-2 icon-primary icon-xs"
                                enable-background="new 0 0 24 24"
                                role="img"
                                viewBox="0 0 24 24"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title>
                                  icon
                                </title>
                                <path
                                  d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                />
                              </svg>
                              <span>
                                Link lista 7
                              </span>
                            </a>
                          </li>
                          <li>
                            <a
                              class="dropdown-item list-item"
                              href="#"
                              role="menuitem"
                              tabindex="0"
                            >
                              <svg
                                class="icon me-2 icon-primary icon-xs"
                                enable-background="new 0 0 24 24"
                                role="img"
                                viewBox="0 0 24 24"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title>
                                  icon
                                </title>
                                <path
                                  d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                />
                              </svg>
                              <span>
                                Link lista 8
                              </span>
                            </a>
                          </li>
                          <li>
                            <a
                              class="dropdown-item list-item"
                              href="#"
                              role="menuitem"
                              tabindex="0"
                            >
                              <svg
                                class="icon me-2 icon-primary icon-xs"
                                enable-background="new 0 0 24 24"
                                role="img"
                                viewBox="0 0 24 24"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title>
                                  icon
                                </title>
                                <path
                                  d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                />
                              </svg>
                              <span>
                                Link lista 9
                              </span>
                            </a>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                  <div
                    class="it-footer-link-wrapper"
                  >
                    <div
                      class="d-flex flex-column flex-lg-row justify-content-around"
                    >
                      <a
                        href="#"
                      >
                        <svg
                          class="icon me-2 icon-primary icon-sm"
                          enable-background="new 0 0 24 24"
                          role="img"
                          viewBox="0 0 24 24"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <title>
                            icon
                          </title>
                          <path
                            d="m18 22.7-6-6-6 6V2h12v20.7zm-6-7.4 5 5V3H7v17.3l5-5z"
                          />
                        </svg>
                        <span>
                          Call to action 1
                        </span>
                      </a>
                      <a
                        href="#"
                      >
                        <svg
                          class="icon me-2 icon-primary icon-sm"
                          enable-background="new 0 0 24 24"
                          role="img"
                          viewBox="0 0 24 24"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <title>
                            icon
                          </title>
                          <path
                            d="m18 22.7-6-6-6 6V2h12v20.7zm-6-7.4 5 5V3H7v17.3l5-5z"
                          />
                        </svg>
                        <span>
                          Call to action 2
                        </span>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Stories Snapshots Documentazione/Menu di navigazione/Megamenu ConImmagineEDescrizione 1`] = `
<div>
  <nav
    class="has-megamenu navbar navbar-expand-lg"
  >
    <div
      class="container-fluid"
    >
      <a
        class="navbar-brand"
      />
      <button
        aria-label="Toggle navigation"
        class="custom-navbar-toggler navbar-toggler"
        type="button"
      >
        <svg
          class="icon icon-sm"
          enable-background="new 0 0 24 24"
          role="img"
          viewBox="0 0 24 24"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            icon
          </title>
          <path
            d="M4 12c.1.5-.3.9-.8 1H3c-.6 0-1-.4-1-1s.4-1 1-1c.5-.1.9.3 1 .8v.2zM3 4.5c-.5-.1-.9.3-1 .8v.2c-.1.5.3.9.8 1H3c.5.1.9-.3 1-.8v-.2c.1-.5-.3-.9-.8-1H3zm0 13c-.6 0-1 .4-1 1s.4 1 1 1 1-.4 1-1-.4-1-1-1zM6 5v1h16V5H6zm0 7.5h16v-1H6v1zM6 19h16v-1H6v1z"
          />
        </svg>
      </button>
      <div
        class="navbar-collapsable collapse navbar-collapsable"
        style="display: none;"
      >
        <div
          class="overlay"
          style="display: none;"
        />
        <div
          class="close-div visually-hidden"
        >
          <button
            class="btn close-menu"
            type="button"
          >
            <span
              class="it-close"
            />
            close
          </button>
        </div>
        <div
          class="menu-wrapper"
        >
          <ul
            class="mt-0 navbar-nav"
          >
            <li
              class="megamenu dropdown nav-item"
            >
              <a
                aria-haspopup="true"
                class="px-lg-2 px-xl-3 dropdown-toggle nav-link"
                data-bs-toggle="dropdown"
                role="button"
              >
                <span>
                  Megamenu con Immagine e Descrizione
                </span>
                <svg
                  class="icon icon-expand icon-xs ms-1"
                  enable-background="new 0 0 24 24"
                  role="img"
                  viewBox="0 0 24 24"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    icon
                  </title>
                  <path
                    d="M11.6 15.4 6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                  />
                </svg>
              </a>
              <div
                class="dropdown-menu"
              >
                <div
                  class="megamenu pb-5 pt-3 py-lg-0"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-12 col-lg-4"
                    >
                      <div
                        class="max-height-col row"
                      >
                        <div
                          class="it-vertical it-description col"
                        >
                          <div
                            class="description-content"
                          >
                            <div
                              class="ratio ratio-21x9 lightgrey-bg-a1 mb-4 rounded"
                            >
                              <figure
                                class="figure"
                              >
                                <img
                                  alt="Segnaposto"
                                  class="figure-img img-fluid rounded"
                                  src="https://via.placeholder.com/560x240/ebebeb/808080/?text=Immagine"
                                />
                              </figure>
                            </div>
                            <p>
                              Omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="col-12 col-lg-8"
                    >
                      <div
                        class="it-heading-link-wrapper"
                      >
                        <a
                          class="it-heading-link"
                          href="#"
                        >
                          <svg
                            class="icon icon icon-sm me-2 mb-1"
                            enable-background="new 0 0 24 24"
                            role="img"
                            viewBox="0 0 24 24"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <title>
                              icon
                            </title>
                            <path
                              d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                            />
                          </svg>
                          <span>
                            Esplora la sezione megamenu
                          </span>
                        </a>
                      </div>
                      <div
                        class="row"
                      >
                        <div
                          class="col-12 col-lg-6"
                        >
                          <div
                            class="link-list-wrapper"
                          >
                            <ul
                              class="link-list"
                            >
                              <li>
                                <a
                                  class="dropdown-item list-item"
                                  href="#"
                                  role="menuitem"
                                  tabindex="0"
                                >
                                  <svg
                                    class="icon me-2 icon-primary icon-xs"
                                    enable-background="new 0 0 24 24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <title>
                                      icon
                                    </title>
                                    <path
                                      d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                    />
                                  </svg>
                                  <span>
                                    Link lista 1
                                  </span>
                                </a>
                              </li>
                              <li>
                                <a
                                  class="dropdown-item list-item"
                                  href="#"
                                  role="menuitem"
                                  tabindex="0"
                                >
                                  <svg
                                    class="icon me-2 icon-primary icon-xs"
                                    enable-background="new 0 0 24 24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <title>
                                      icon
                                    </title>
                                    <path
                                      d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                    />
                                  </svg>
                                  <span>
                                    Link lista 2
                                  </span>
                                </a>
                              </li>
                              <li>
                                <a
                                  class="dropdown-item list-item"
                                  href="#"
                                  role="menuitem"
                                  tabindex="0"
                                >
                                  <svg
                                    class="icon me-2 icon-primary icon-xs"
                                    enable-background="new 0 0 24 24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <title>
                                      icon
                                    </title>
                                    <path
                                      d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                    />
                                  </svg>
                                  <span>
                                    Link lista 3
                                  </span>
                                </a>
                              </li>
                            </ul>
                          </div>
                        </div>
                        <div
                          class="col-12 col-lg-6"
                        >
                          <div
                            class="link-list-wrapper"
                          >
                            <ul
                              class="link-list"
                            >
                              <li>
                                <a
                                  class="dropdown-item list-item"
                                  href="#"
                                  role="menuitem"
                                  tabindex="0"
                                >
                                  <svg
                                    class="icon me-2 icon-primary icon-xs"
                                    enable-background="new 0 0 24 24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <title>
                                      icon
                                    </title>
                                    <path
                                      d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                    />
                                  </svg>
                                  <span>
                                    Link lista 4
                                  </span>
                                </a>
                              </li>
                              <li>
                                <a
                                  class="dropdown-item list-item"
                                  href="#"
                                  role="menuitem"
                                  tabindex="0"
                                >
                                  <svg
                                    class="icon me-2 icon-primary icon-xs"
                                    enable-background="new 0 0 24 24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <title>
                                      icon
                                    </title>
                                    <path
                                      d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                    />
                                  </svg>
                                  <span>
                                    Link lista 5
                                  </span>
                                </a>
                              </li>
                              <li>
                                <a
                                  class="dropdown-item list-item"
                                  href="#"
                                  role="menuitem"
                                  tabindex="0"
                                >
                                  <svg
                                    class="icon me-2 icon-primary icon-xs"
                                    enable-background="new 0 0 24 24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <title>
                                      icon
                                    </title>
                                    <path
                                      d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                    />
                                  </svg>
                                  <span>
                                    Link lista 6
                                  </span>
                                </a>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Stories Snapshots Documentazione/Menu di navigazione/Megamenu ConIntestazioneELinkMore 1`] = `
<div>
  <nav
    class="has-megamenu navbar navbar-expand-lg"
  >
    <div
      class="container-fluid"
    >
      <a
        class="navbar-brand"
      />
      <button
        aria-label="Toggle navigation"
        class="custom-navbar-toggler navbar-toggler"
        type="button"
      >
        <svg
          class="icon icon-sm"
          enable-background="new 0 0 24 24"
          role="img"
          viewBox="0 0 24 24"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            icon
          </title>
          <path
            d="M4 12c.1.5-.3.9-.8 1H3c-.6 0-1-.4-1-1s.4-1 1-1c.5-.1.9.3 1 .8v.2zM3 4.5c-.5-.1-.9.3-1 .8v.2c-.1.5.3.9.8 1H3c.5.1.9-.3 1-.8v-.2c.1-.5-.3-.9-.8-1H3zm0 13c-.6 0-1 .4-1 1s.4 1 1 1 1-.4 1-1-.4-1-1-1zM6 5v1h16V5H6zm0 7.5h16v-1H6v1zM6 19h16v-1H6v1z"
          />
        </svg>
      </button>
      <div
        class="navbar-collapsable collapse navbar-collapsable"
        style="display: none;"
      >
        <div
          class="overlay"
          style="display: none;"
        />
        <div
          class="close-div visually-hidden"
        >
          <button
            class="btn close-menu"
            type="button"
          >
            <span
              class="it-close"
            />
            close
          </button>
        </div>
        <div
          class="menu-wrapper"
        >
          <ul
            class="mt-0 navbar-nav"
          >
            <li
              class="megamenu dropdown nav-item"
            >
              <a
                aria-haspopup="true"
                class="px-lg-2 px-xl-3 dropdown-toggle nav-link"
                data-bs-toggle="dropdown"
                role="button"
              >
                <span>
                  Megamenu con intestazione e "esplora tutti"
                </span>
                <svg
                  class="icon icon-expand icon-xs ms-1"
                  enable-background="new 0 0 24 24"
                  role="img"
                  viewBox="0 0 24 24"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    icon
                  </title>
                  <path
                    d="M11.6 15.4 6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                  />
                </svg>
              </a>
              <div
                class="dropdown-menu"
              >
                <div
                  class="megamenu pb-5 pt-3 py-lg-0"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-12"
                    >
                      <div
                        class="it-heading-link-wrapper"
                      >
                        <a
                          class="it-heading-link"
                          href="#"
                        >
                          <svg
                            class="icon me-2 mb-1"
                            enable-background="new 0 0 24 24"
                            role="img"
                            viewBox="0 0 24 24"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <title>
                              icon
                            </title>
                            <path
                              d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                            />
                          </svg>
                          <span>
                            Esplora la sezione megamenu
                          </span>
                        </a>
                      </div>
                      <div
                        class="row"
                      >
                        <div
                          class="col-12 col-lg-4"
                        >
                          <div
                            class="link-list-wrapper"
                          >
                            <ul
                              class="link-list"
                            >
                              <li>
                                <a
                                  class="dropdown-item list-item"
                                  href="#"
                                  role="menuitem"
                                  tabindex="0"
                                >
                                  <svg
                                    class="icon me-2 icon-primary icon-xs"
                                    enable-background="new 0 0 24 24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <title>
                                      icon
                                    </title>
                                    <path
                                      d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                    />
                                  </svg>
                                  <span>
                                    Link lista 1
                                  </span>
                                </a>
                              </li>
                              <li>
                                <a
                                  class="dropdown-item list-item"
                                  href="#"
                                  role="menuitem"
                                  tabindex="0"
                                >
                                  <svg
                                    class="icon me-2 icon-primary icon-xs"
                                    enable-background="new 0 0 24 24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <title>
                                      icon
                                    </title>
                                    <path
                                      d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                    />
                                  </svg>
                                  <span>
                                    Link lista 2
                                  </span>
                                </a>
                              </li>
                              <li>
                                <a
                                  class="dropdown-item list-item"
                                  href="#"
                                  role="menuitem"
                                  tabindex="0"
                                >
                                  <svg
                                    class="icon me-2 icon-primary icon-xs"
                                    enable-background="new 0 0 24 24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <title>
                                      icon
                                    </title>
                                    <path
                                      d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                    />
                                  </svg>
                                  <span>
                                    Link lista 3
                                  </span>
                                </a>
                              </li>
                            </ul>
                          </div>
                        </div>
                        <div
                          class="col-12 col-lg-4"
                        >
                          <div
                            class="link-list-wrapper"
                          >
                            <ul
                              class="link-list"
                            >
                              <li>
                                <a
                                  class="dropdown-item list-item"
                                  href="#"
                                  role="menuitem"
                                  tabindex="0"
                                >
                                  <svg
                                    class="icon me-2 icon-primary icon-xs"
                                    enable-background="new 0 0 24 24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <title>
                                      icon
                                    </title>
                                    <path
                                      d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                    />
                                  </svg>
                                  <span>
                                    Link lista 4
                                  </span>
                                </a>
                              </li>
                              <li>
                                <a
                                  class="dropdown-item list-item"
                                  href="#"
                                  role="menuitem"
                                  tabindex="0"
                                >
                                  <svg
                                    class="icon me-2 icon-primary icon-xs"
                                    enable-background="new 0 0 24 24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <title>
                                      icon
                                    </title>
                                    <path
                                      d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                    />
                                  </svg>
                                  <span>
                                    Link lista 5
                                  </span>
                                </a>
                              </li>
                              <li>
                                <a
                                  class="dropdown-item list-item"
                                  href="#"
                                  role="menuitem"
                                  tabindex="0"
                                >
                                  <svg
                                    class="icon me-2 icon-primary icon-xs"
                                    enable-background="new 0 0 24 24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <title>
                                      icon
                                    </title>
                                    <path
                                      d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                    />
                                  </svg>
                                  <span>
                                    Link lista 6
                                  </span>
                                </a>
                              </li>
                            </ul>
                          </div>
                        </div>
                        <div
                          class="col-12 col-lg-4"
                        >
                          <div
                            class="link-list-wrapper"
                          >
                            <ul
                              class="link-list"
                            >
                              <li>
                                <a
                                  class="dropdown-item list-item"
                                  href="#"
                                  role="menuitem"
                                  tabindex="0"
                                >
                                  <svg
                                    class="icon me-2 icon-primary icon-xs"
                                    enable-background="new 0 0 24 24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <title>
                                      icon
                                    </title>
                                    <path
                                      d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                    />
                                  </svg>
                                  <span>
                                    Link lista 7
                                  </span>
                                </a>
                              </li>
                              <li>
                                <a
                                  class="dropdown-item list-item"
                                  href="#"
                                  role="menuitem"
                                  tabindex="0"
                                >
                                  <svg
                                    class="icon me-2 icon-primary icon-xs"
                                    enable-background="new 0 0 24 24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <title>
                                      icon
                                    </title>
                                    <path
                                      d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                    />
                                  </svg>
                                  <span>
                                    Link lista 8
                                  </span>
                                </a>
                              </li>
                              <li>
                                <a
                                  class="dropdown-item list-item"
                                  href="#"
                                  role="menuitem"
                                  tabindex="0"
                                >
                                  <svg
                                    class="icon me-2 icon-primary icon-xs"
                                    enable-background="new 0 0 24 24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <title>
                                      icon
                                    </title>
                                    <path
                                      d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                    />
                                  </svg>
                                  <span>
                                    Link lista 9
                                  </span>
                                </a>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Stories Snapshots Documentazione/Menu di navigazione/Megamenu ConLinkMore 1`] = `
<div>
  <nav
    class="has-megamenu navbar navbar-expand-lg"
  >
    <div
      class="container-fluid"
    >
      <a
        class="navbar-brand"
      />
      <button
        aria-label="Toggle navigation"
        class="custom-navbar-toggler navbar-toggler"
        type="button"
      >
        <svg
          class="icon icon-sm"
          enable-background="new 0 0 24 24"
          role="img"
          viewBox="0 0 24 24"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            icon
          </title>
          <path
            d="M4 12c.1.5-.3.9-.8 1H3c-.6 0-1-.4-1-1s.4-1 1-1c.5-.1.9.3 1 .8v.2zM3 4.5c-.5-.1-.9.3-1 .8v.2c-.1.5.3.9.8 1H3c.5.1.9-.3 1-.8v-.2c.1-.5-.3-.9-.8-1H3zm0 13c-.6 0-1 .4-1 1s.4 1 1 1 1-.4 1-1-.4-1-1-1zM6 5v1h16V5H6zm0 7.5h16v-1H6v1zM6 19h16v-1H6v1z"
          />
        </svg>
      </button>
      <div
        class="navbar-collapsable collapse navbar-collapsable"
        style="display: none;"
      >
        <div
          class="overlay"
          style="display: none;"
        />
        <div
          class="close-div visually-hidden"
        >
          <button
            class="btn close-menu"
            type="button"
          >
            <span
              class="it-close"
            />
            close
          </button>
        </div>
        <div
          class="menu-wrapper"
        >
          <ul
            class="mt-0 navbar-nav"
          >
            <li
              class="megamenu dropdown nav-item"
            >
              <a
                aria-haspopup="true"
                class="px-lg-2 px-xl-3 dropdown-toggle nav-link"
                data-bs-toggle="dropdown"
                role="button"
              >
                <span>
                  Megamenu con link "Esplora tutti"
                </span>
                <svg
                  class="icon icon-expand icon-xs ms-1"
                  enable-background="new 0 0 24 24"
                  role="img"
                  viewBox="0 0 24 24"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    icon
                  </title>
                  <path
                    d="M11.6 15.4 6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                  />
                </svg>
              </a>
              <div
                class="dropdown-menu"
              >
                <div
                  class="megamenu pb-5 pt-3 py-lg-0"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-12 col-lg-4"
                    >
                      <div
                        class="link-list-wrapper"
                      >
                        <ul
                          class="link-list"
                        >
                          <li>
                            <a
                              class="dropdown-item list-item"
                              href="#"
                              role="menuitem"
                              tabindex="0"
                            >
                              <svg
                                class="icon me-2 icon-primary icon-xs"
                                enable-background="new 0 0 24 24"
                                role="img"
                                viewBox="0 0 24 24"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title>
                                  icon
                                </title>
                                <path
                                  d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                />
                              </svg>
                              <span>
                                Link lista 1
                              </span>
                            </a>
                          </li>
                          <li>
                            <a
                              class="dropdown-item list-item"
                              href="#"
                              role="menuitem"
                              tabindex="0"
                            >
                              <svg
                                class="icon me-2 icon-primary icon-xs"
                                enable-background="new 0 0 24 24"
                                role="img"
                                viewBox="0 0 24 24"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title>
                                  icon
                                </title>
                                <path
                                  d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                />
                              </svg>
                              <span>
                                Link lista 2
                              </span>
                            </a>
                          </li>
                          <li>
                            <a
                              class="dropdown-item list-item"
                              href="#"
                              role="menuitem"
                              tabindex="0"
                            >
                              <svg
                                class="icon me-2 icon-primary icon-xs"
                                enable-background="new 0 0 24 24"
                                role="img"
                                viewBox="0 0 24 24"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title>
                                  icon
                                </title>
                                <path
                                  d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                />
                              </svg>
                              <span>
                                Link lista 3
                              </span>
                            </a>
                          </li>
                        </ul>
                      </div>
                    </div>
                    <div
                      class="col-12 col-lg-4"
                    >
                      <div
                        class="link-list-wrapper"
                      >
                        <ul
                          class="link-list"
                        >
                          <li>
                            <a
                              class="dropdown-item list-item"
                              href="#"
                              role="menuitem"
                              tabindex="0"
                            >
                              <svg
                                class="icon me-2 icon-primary icon-xs"
                                enable-background="new 0 0 24 24"
                                role="img"
                                viewBox="0 0 24 24"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title>
                                  icon
                                </title>
                                <path
                                  d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                />
                              </svg>
                              <span>
                                Link lista 4
                              </span>
                            </a>
                          </li>
                          <li>
                            <a
                              class="dropdown-item list-item"
                              href="#"
                              role="menuitem"
                              tabindex="0"
                            >
                              <svg
                                class="icon me-2 icon-primary icon-xs"
                                enable-background="new 0 0 24 24"
                                role="img"
                                viewBox="0 0 24 24"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title>
                                  icon
                                </title>
                                <path
                                  d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                />
                              </svg>
                              <span>
                                Link lista 5
                              </span>
                            </a>
                          </li>
                          <li>
                            <a
                              class="dropdown-item list-item"
                              href="#"
                              role="menuitem"
                              tabindex="0"
                            >
                              <svg
                                class="icon me-2 icon-primary icon-xs"
                                enable-background="new 0 0 24 24"
                                role="img"
                                viewBox="0 0 24 24"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title>
                                  icon
                                </title>
                                <path
                                  d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                />
                              </svg>
                              <span>
                                Link lista 6
                              </span>
                            </a>
                          </li>
                        </ul>
                      </div>
                    </div>
                    <div
                      class="col-12 col-lg-4"
                    >
                      <div
                        class="link-list-wrapper"
                      >
                        <ul
                          class="link-list"
                        >
                          <li>
                            <a
                              class="dropdown-item list-item"
                              href="#"
                              role="menuitem"
                              tabindex="0"
                            >
                              <svg
                                class="icon me-2 icon-primary icon-xs"
                                enable-background="new 0 0 24 24"
                                role="img"
                                viewBox="0 0 24 24"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title>
                                  icon
                                </title>
                                <path
                                  d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                />
                              </svg>
                              <span>
                                Link lista 7
                              </span>
                            </a>
                          </li>
                          <li>
                            <a
                              class="dropdown-item list-item"
                              href="#"
                              role="menuitem"
                              tabindex="0"
                            >
                              <svg
                                class="icon me-2 icon-primary icon-xs"
                                enable-background="new 0 0 24 24"
                                role="img"
                                viewBox="0 0 24 24"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title>
                                  icon
                                </title>
                                <path
                                  d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                />
                              </svg>
                              <span>
                                Link lista 8
                              </span>
                            </a>
                          </li>
                          <li>
                            <a
                              class="dropdown-item list-item"
                              href="#"
                              role="menuitem"
                              tabindex="0"
                            >
                              <svg
                                class="icon me-2 icon-primary icon-xs"
                                enable-background="new 0 0 24 24"
                                role="img"
                                viewBox="0 0 24 24"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title>
                                  icon
                                </title>
                                <path
                                  d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                />
                              </svg>
                              <span>
                                Link lista 9
                              </span>
                            </a>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                  <div
                    class="text-end it-footer-link-wrapper"
                  >
                    <a
                      href="#"
                    >
                      <span>
                        Esplora tutti i contenuti del megamenu
                         
                        <svg
                          class="icon ms-2 icon-primary icon-sm"
                          enable-background="new 0 0 24 24"
                          role="img"
                          viewBox="0 0 24 24"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <title>
                            icon
                          </title>
                          <path
                            d="m13.9 5.4-.7.7 5.3 5.4H3v1h15.5l-5.3 5.4.7.7 6.6-6.6-6.6-6.6z"
                          />
                        </svg>
                      </span>
                    </a>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </nav>
</div>
`;
